Fixed buttons hiding behind footer on smaller breakpoints.

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -17,6 +17,7 @@ span > a {
     font-size: 1em;
     vertical-align: middle;
     line-height: 50px;
+    margin-top: 50px;
     
 }
 
@@ -162,7 +163,11 @@ hr {
 
 li > a { text-align:  right }
 
-.projectViewButton:nth-of-type(2) { margin-bottom: 75px; }
+/*=====================
+    PROJECT VIEW
+=====================*/
+
+#projectViewButtons { margin-bottom: 75px; }
 
 .list-item { 
     padding-left: 2em;
